# Collider

./: .gitattributes  .gitignore  BUILD_SUCCESS_SUMMARY.md  CABLE_INSPECTOR_MINMAX_REINTEGRATION_PLAN.md  DEBUG_BUILD_UPDATE_SUMMARY.md  EXPERIMENTAL_AUDIO_LIBRARIES.md  GLOBAL_GPU_SETTINGS_GUIDE.md  GPU_FIX_SUMMARY.md  Gemini-REFACTORING-FUTURE.md  IMGUI_NODE_DESIGN_GUIDE.md  LIBRARY_BENEFITS_PIKON_RADITSZ.md  MENU_REORGANIZATION_SUMMARY.md  MIGRATION_GUIDE_IMNODES_TO_IMNODEFLOW.md  NEURAL_AUDIO_GENERATION.md  NODE_UPGRADE_TRACKER.md  OPENCV_CUDA_SYSTEM_SUMMARY.md  OPENCV_QUICK_REFERENCE.md  PIKON_RADITSZ_DISTRIBUTION.md  POSE_ESTIMATOR_DESTRUCTION_CRASH_ANALYSIS.md  README.md  README_EXAMPLE.md  README_STRUCTURE.md  README_SUMMARY.md  add_missing_dlls.ps1  analyse.md  archive_opencv_cache.ps1  archive_opencv_cache_debug.ps1  bpm_node_Essentials.txt  bpm_node_moofy_essentials.ps1  build_opencv_cuda_once.ps1  conceptualize.md  current_topic.md  current_topic_timeline_sync.md  git_good_use.md  integration_report.md  manifest.json  manifest_0.6.2_cuda.json  moofy.ps1  moofy_Animation.txt  moofy_BitCrusher.txt  (+37 more)
juce/: BUILD_FIX_SUMMARY.md  CMakeLists - CUDA_CUDNN.txt.archive  CMakeLists.txt  CMakeLists.txt.backup  CMakePresets.json  GPU_IMPLEMENTATION_BUILD_ERRORS_REPORT.md  OPENCV_CACHE_SCRIPTS_GUIDE.md  apply_opencv_npp_patch.py  build_log.txt  build_opencv_short.ps1  build_opencv_working.ps1  check_cmake.bat  cmake_path.txt  dir_list.txt  juce_structure.txt  opencv_cuda13_npp.patch  project_structure_powershell.txt  test_build.bat
juce/Source/: main.cpp
juce/Source/animation/: AnimationBinder.cpp  AnimationBinder.h  AnimationData.h  AnimationFileLoader.cpp  AnimationFileLoader.h  AnimationRenderer.cpp  AnimationRenderer.h  Animator.cpp  Animator.h  FbxLoader.cpp  FbxLoader.h  GltfLoader.cpp  GltfLoader.h  RawAnimationData.cpp  RawAnimationData.h
juce/Source/app/: MainApplication.cpp  MainApplication.h
juce/Source/audio/: AudioEngine.cpp  AudioEngine.h  MidiDeviceManager.cpp  MidiDeviceManager.h  OscDeviceManager.cpp  OscDeviceManager.h
juce/Source/audio/assets/: SampleBank.cpp  SampleBank.h
juce/Source/audio/dsp/: TimePitchProcessor.h
juce/Source/audio/fx/: FXChain.cpp  FXChain.h  GainProcessor.cpp  GainProcessor.h
juce/Source/audio/graph/: ModularSynthProcessor.cpp  ModularSynthProcessor.h  VoiceProcessor.cpp  VoiceProcessor.h
juce/Source/audio/modules/: ADSRModuleProcessor.cpp  ADSRModuleProcessor.h  AnimationModuleProcessor.cpp  AnimationModuleProcessor.h  AttenuverterModuleProcessor.cpp  AttenuverterModuleProcessor.h  AudioInputModuleProcessor.cpp  AudioInputModuleProcessor.h  AutomationLaneModuleProcessor.cpp  AutomationLaneModuleProcessor.h  AutomatoModuleProcessor.cpp  AutomatoModuleProcessor.h  BPMMonitorModuleProcessor.cpp  BPMMonitorModuleProcessor.h  BestPracticeNodeProcessor.cpp  BestPracticeNodeProcessor.h  BestPracticeNodeProcessor.md  BitCrusherModuleProcessor.cpp  BitCrusherModuleProcessor.h  CVMixerModuleProcessor.cpp  CVMixerModuleProcessor.h  CVOSCSenderModuleProcessor.cpp  CVOSCSenderModuleProcessor.h  ChordArpModuleProcessor.cpp  ChordArpModuleProcessor.h  ChorusModuleProcessor.cpp  ChorusModuleProcessor.h  ClockDividerModuleProcessor.cpp  ClockDividerModuleProcessor.h  ColorTrackerModule.cpp  ColorTrackerModule.h  CommentModuleProcessor.cpp  CommentModuleProcessor.h  ComparatorModuleProcessor.cpp  ComparatorModuleProcessor.h  CompressorModuleProcessor.cpp  CompressorModuleProcessor.h  ContourDetectorModule.cpp  ContourDetectorModule.h  CropVideoModule.cpp  (+176 more)
juce/Source/audio/utils/: VoiceDeletionUtils.h
juce/Source/audio/voices/: ModularVoice.h  NoiseVoiceProcessor.cpp  NoiseVoiceProcessor.h  SampleVoiceProcessor.cpp  SampleVoiceProcessor.h  SynthVoiceProcessor.cpp  SynthVoiceProcessor.h  VoiceDownloadHelper.cpp  VoiceDownloadHelper.h  VoiceDownloadThread.cpp  VoiceDownloadThread.h
juce/Source/ipc/: CommandBus.cpp  CommandBus.h  IpcServer.cpp  IpcServer.h  OscClient.h  OscConfig.h
juce/Source/preset_creator/: ControllerPresetManager.cpp  ControllerPresetManager.h  HelpManagerComponent.cpp  HelpManagerComponent.h  ImGuiNodeEditorComponent.cpp  ImGuiNodeEditorComponent.h  ImGuiNodeEditorComponent.h.backup  MidiManager.h  NotificationManager.cpp  NotificationManager.h  PatchGenerator.cpp  PatchGenerator.h  PinDatabase.cpp  PinDatabase.h  PresetAutoHealer.cpp  PresetAutoHealer.h  PresetCreatorApplication.h  PresetCreatorComponent.cpp  PresetCreatorComponent.h  PresetCreatorMain.cpp  PresetManager.cpp  PresetManager.h  PresetValidator.cpp  PresetValidator.h  SampleManager.cpp  SampleManager.h  SavePresetJob.cpp  SavePresetJob.h  ShortcutManager.cpp  ShortcutManager.h  SplashScreenComponent.cpp  SplashScreenComponent.h  VoiceDownloadDialog.cpp  VoiceDownloadDialog.h  VstManager.cpp  VstManager.h
juce/Source/preset_creator/theme/: Theme.h  (+4 more)
juce/Source/tests/: ModuleProcessorTests.cpp
juce/Source/ui/: DebugInfo.h  MainComponent.cpp  MainComponent.h  NodeUI_fwd.h  TestHarnessComponent.archive.cpp  TestHarnessComponent.cpp  TestHarnessComponent.h  VisualiserComponent.cpp  VisualiserComponent.h
juce/Source/updater/: FileDownloader.cpp  FileDownloader.h  HashVerifier.cpp  HashVerifier.h  UpdateApplier.cpp  UpdateApplier.h  UpdateChecker.cpp  UpdateChecker.h  UpdateManager.cpp  UpdateManager.h  UpdateManager_Phase1.cpp  UpdaterTypes.cpp  UpdaterTypes.h  VersionManager.cpp  VersionManager.h
juce/Source/utils/: CudaDeviceCountCache.h  RtLogger.cpp  RtLogger.h  VersionInfo.h
juce/Source/video/: CameraEnumerator.h  VideoFrameManager.h
juce/assets/: deeplabv3-classes.txt  get_yolo_models.ps1  module_aliases.json
juce/b/: CMakeCache.txt
juce/build-audio-only/: ALL_BUILD.vcxproj  CMakeCache.txt  ColliderApp.vcxproj  ColliderApp_rc_lib.vcxproj  ColliderAudioEngine.sln  INSTALL.vcxproj  PikonRaditszAudioApp.vcxproj  PikonRaditszAudioApp_rc_lib.vcxproj  PikonUpdater.vcxproj  PresetCreatorApp.vcxproj  PresetCreatorApp_rc_lib.vcxproj  ZERO_CHECK.vcxproj  cmake_install.cmake  rubberband_single.vcxproj  soundtouch.vcxproj  ufbx_static.vcxproj
(+3379 files in other folders)
